sfdx-source/LabsActionPlans/main/default/objects/Alert__c/fields/Action_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Engagement Plan Template</label>
    <referenceTo>ActionPlanTemplate__c</referenceTo>
    <relationshipLabel>Alerts</relationshipLabel>
    <relationshipName>Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>