sfdx-source/LabsActionPlans/main/default/objects/Alert__c/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if any action should be taken based on this alert</description>
    <inlineHelpText>Indicates if any action should be taken based on this alert</inlineHelpText>
    <label>Action Required</label>
    <type>Checkbox</type>
</CustomField>