sfdx-source/LabsActionPlans/main/default/objects/Alert__c/fields/Alert_Description__c.field-meta.xml
<CustomField>
    <fullName>Alert_Description__c</fullName>
    <label>Alert Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>