sfdx-source/LabsActionPlans/main/default/objects/Alert__c/fields/Alert_Reason__c.field-meta.xml
<CustomField>
    <fullName>Alert_Reason__c</fullName>
    <label>Alert Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reason 1</fullName>
            </value>
            <value>
                <fullName>Reason 2</fullName>
            </value>
            <value>
                <fullName>Reason 3</fullName>
            </value>
            <value>
                <fullName>Academic Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>