sfdx-source/LabsActionPlans/main/default/objects/Alert__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>Date when alert was marked as Resolved</description>
    <inlineHelpText>Date when alert was marked as Resolved</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>