sfdx-source/LabsActionPlans/main/default/objects/Alert__c/fields/Days_from_trigger_to_start_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Days_from_trigger_to_start_Action_Plan__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Days from trigger to start Engagement Plan. Defaults to 0, the day the plan is created. Days after today to start the first task. Defaults to zero if left blank</description>
    <inlineHelpText>Days after today to start the first task. Defaults to zero if left blank</inlineHelpText>
    <label>Days from today to start plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>