sfdx-source/LabsActionPlans/main/default/objects/Alert__c/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <description>A case has been created for this alert. Check true when there is a case associated.</description>
    <formula>NOT(ISBLANK( Case__c ))</formula>
    <inlineHelpText>If checked, the alert activity has been promoted to a case.</inlineHelpText>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>