sfdx-source/LabsActionPlans/main/default/objects/Alert__c/fields/First_Activity__c.field-meta.xml
<CustomField>
    <fullName>First_Activity__c</fullName>
    <description>The first activity generated by this alert.</description>
    <formula>Engagement__r.Parent_Activity__c</formula>
    <inlineHelpText>The first activity generated by this alert.</inlineHelpText>
    <label>First Activity</label>
    <type>Text</type>
</CustomField>