sfdx-source/LabsActionPlans/main/default/objects/Alert__c/fields/Resolution_Reason__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Reason__c</fullName>
    <label>Resolution Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Unresolved</fullName>
                <default>true</default>
                <label>Unresolved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>