sfdx-source/LabsActionPlans/main/default/objects/Alert__c/validationRules/Enforce_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISBLANK( TEXT(Alert_Reason__c) )
, ISBLANK( Contact__c)
, ISBLANK( TEXT(Status__c ))
, ISBLANK(  Action_Plan_Template__c  )
)</errorConditionFormula>
    <errorMessage>Missing required field. Contact, Alert Reason, Status are required.</errorMessage>
</ValidationRule>