sfdx-source/LabsActionPlans/main/default/objects/Alert__c/validationRules/Enforce_Required_Fields_Action_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Required_Fields_Action_Required</fullName>
    <active>true</active>
    <description>If Action Required is true, enforce required fields.</description>
    <errorConditionFormula>AND(Action_Required__c = true,
OR(
ISBLANK( Action_Plan_Template__c )
,ISBLANK(  Days_from_trigger_to_start_Action_Plan__c  )
))</errorConditionFormula>
    <errorMessage>Required fields missing: Engagement Plan Template, Days from trigger to start Engagement Plan.</errorMessage>
</ValidationRule>