sfdx-source/LabsActionPlans/main/default/objects/Alert__c/validationRules/Enforce_Required_Fields_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Required_Fields_Closed</fullName>
    <active>true</active>
    <description>Enforce required fields to close an alert</description>
    <errorConditionFormula>AND( TEXT( Status__c ) = &quot;Closed&quot;,
OR(
ISBLANK( TEXT( Resolution_Reason__c ) )
, ISBLANK(  Resolution_Description__c )
)
)</errorConditionFormula>
    <errorMessage>Resolution Reason and Description are required to close an alert.</errorMessage>
</ValidationRule>