sfdx-source/LabsActionPlans/main/default/objects/Alert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Action_Required__c</columns>
    <columns>Alert_Reason__c</columns>
    <columns>Engagement__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>